# fspaces

./: .Cargo.toml.swp  Cargo.toml  README.md  cli.yaml
src/: .main.rs.swo  .main.rs.swp  cli.yaml  main.rs
