[package]
name = "fspaces"
version = "0.1.0"
authors = ["Abdelkader Madoui <abdelkadermadoui@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
colored = "2.0.0"
clap = { version = "2.33.3", features = ["yaml"] }
regex = "1.5.4"
lazy_static = "0.1.*"
